yeah the main chatting page almost complete

--- a/index.html
+++ b/index.html
@@ -64,13 +64,180 @@
               </form>
             </div>
           </section>
-          <section class="w-full h-full bg-white">
+          <section class="w-full h-full bg-white overflow-auto">
             <div
-              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-100"
+              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
             >
-              <img src="img/2.jpg" />
-              <div>
-                <h1>Bezaleel <span>11:00 PM</span></h1>
+              <img class="rounded-[50%] p-2" src="img/2.jpg" />
+              <div class="p-2">
+                <h1>
+                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
+                </h1>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+            <div
+              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
+            >
+              <img class="rounded-[50%] p-2" src="img/2.jpg" />
+              <div class="p-2">
+                <h1>
+                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
+                </h1>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+            <div
+              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
+            >
+              <img class="rounded-[50%] p-2" src="img/2.jpg" />
+              <div class="p-2">
+                <h1>
+                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
+                </h1>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+            <div
+              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
+            >
+              <img class="rounded-[50%] p-2" src="img/2.jpg" />
+              <div class="p-2">
+                <h1>
+                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
+                </h1>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+            <div
+              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
+            >
+              <img class="rounded-[50%] p-2" src="img/2.jpg" />
+              <div class="p-2">
+                <h1>
+                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
+                </h1>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+            <div
+              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
+            >
+              <img class="rounded-[50%] p-2" src="img/2.jpg" />
+              <div class="p-2">
+                <h1>
+                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
+                </h1>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+            <div
+              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
+            >
+              <img class="rounded-[50%] p-2" src="img/2.jpg" />
+              <div class="p-2">
+                <h1>
+                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
+                </h1>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+            <div
+              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
+            >
+              <img class="rounded-[50%] p-2" src="img/2.jpg" />
+              <div class="p-2">
+                <h1>
+                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
+                </h1>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+            <div
+              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
+            >
+              <img class="rounded-[50%] p-2" src="img/2.jpg" />
+              <div class="p-2">
+                <h1>
+                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
+                </h1>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+            <div
+              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
+            >
+              <img class="rounded-[50%] p-2" src="img/2.jpg" />
+              <div class="p-2">
+                <h1>
+                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
+                </h1>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+            <div
+              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
+            >
+              <img class="rounded-[50%] p-2" src="img/2.jpg" />
+              <div class="p-2">
+                <h1>
+                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
+                </h1>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+            <div
+              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
+            >
+              <img class="rounded-[50%] p-2" src="img/2.jpg" />
+              <div class="p-2">
+                <h1>
+                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
+                </h1>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+            <div
+              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
+            >
+              <img class="rounded-[50%] p-2" src="img/2.jpg" />
+              <div class="p-2">
+                <h1>
+                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
+                </h1>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+            <div
+              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
+            >
+              <img class="rounded-[50%] p-2" src="img/2.jpg" />
+              <div class="p-2">
+                <h1>
+                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
+                </h1>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+            <div
+              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
+            >
+              <img class="rounded-[50%] p-2" src="img/2.jpg" />
+              <div class="p-2">
+                <h1>
+                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
+                </h1>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+            <div
+              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
+            >
+              <img class="rounded-[50%] p-2" src="img/2.jpg" />
+              <div class="p-2">
+                <h1>
+                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
+                </h1>
                 <p>Lorem ipsum dolor sit.</p>
               </div>
             </div>
