--- a/index.html
+++ b/index.html
@@ -32,10 +32,8 @@
   <body class="bg-slate-200 font-inter">
     <div class="w-full bg-emerald-700 h-28 shadow-md fixed"></div>
     <div class="container m-auto relative pt-8">
-      <div
-        class="bg-white shadow-md h-[36rem] mx-16 flex overflow-hidden relative"
-      >
-        <div class="w-1/3 bg-slate-300 border-r-slate-500">
+      <div class="bg-white shadow-md h-[36rem] mx-16 flex relative">
+        <div class="w-1/3 bg-slate-300 border-r-slate-500 h-full">
           <section class="w-full h-28 bg-slate-200">
             <div class="w-full h-1/2 flex py-2 px-5 justify-between">
               <img
@@ -64,186 +62,40 @@
               </form>
             </div>
           </section>
-          <section class="w-full h-full bg-white overflow-auto">
+          <section class="w-full h-[80%] bg-white overflow-auto">
             <div
               class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
             >
               <img class="rounded-[50%] p-2" src="img/2.jpg" />
               <div class="p-2">
                 <h1>
-                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
+                  Bezaleel <span class="ml-40 text-[12px]">11:00 PM</span>
                 </h1>
-                <p>Lorem ipsum dolor sit.</p>
-              </div>
-            </div>
-            <div
-              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
-            >
-              <img class="rounded-[50%] p-2" src="img/2.jpg" />
-              <div class="p-2">
-                <h1>
-                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
-                </h1>
-                <p>Lorem ipsum dolor sit.</p>
-              </div>
-            </div>
-            <div
-              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
-            >
-              <img class="rounded-[50%] p-2" src="img/2.jpg" />
-              <div class="p-2">
-                <h1>
-                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
-                </h1>
-                <p>Lorem ipsum dolor sit.</p>
-              </div>
-            </div>
-            <div
-              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
-            >
-              <img class="rounded-[50%] p-2" src="img/2.jpg" />
-              <div class="p-2">
-                <h1>
-                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
-                </h1>
-                <p>Lorem ipsum dolor sit.</p>
-              </div>
-            </div>
-            <div
-              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
-            >
-              <img class="rounded-[50%] p-2" src="img/2.jpg" />
-              <div class="p-2">
-                <h1>
-                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
-                </h1>
-                <p>Lorem ipsum dolor sit.</p>
-              </div>
-            </div>
-            <div
-              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
-            >
-              <img class="rounded-[50%] p-2" src="img/2.jpg" />
-              <div class="p-2">
-                <h1>
-                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
-                </h1>
-                <p>Lorem ipsum dolor sit.</p>
-              </div>
-            </div>
-            <div
-              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
-            >
-              <img class="rounded-[50%] p-2" src="img/2.jpg" />
-              <div class="p-2">
-                <h1>
-                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
-                </h1>
-                <p>Lorem ipsum dolor sit.</p>
-              </div>
-            </div>
-            <div
-              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
-            >
-              <img class="rounded-[50%] p-2" src="img/2.jpg" />
-              <div class="p-2">
-                <h1>
-                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
-                </h1>
-                <p>Lorem ipsum dolor sit.</p>
-              </div>
-            </div>
-            <div
-              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
-            >
-              <img class="rounded-[50%] p-2" src="img/2.jpg" />
-              <div class="p-2">
-                <h1>
-                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
-                </h1>
-                <p>Lorem ipsum dolor sit.</p>
-              </div>
-            </div>
-            <div
-              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
-            >
-              <img class="rounded-[50%] p-2" src="img/2.jpg" />
-              <div class="p-2">
-                <h1>
-                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
-                </h1>
-                <p>Lorem ipsum dolor sit.</p>
-              </div>
-            </div>
-            <div
-              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
-            >
-              <img class="rounded-[50%] p-2" src="img/2.jpg" />
-              <div class="p-2">
-                <h1>
-                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
-                </h1>
-                <p>Lorem ipsum dolor sit.</p>
-              </div>
-            </div>
-            <div
-              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
-            >
-              <img class="rounded-[50%] p-2" src="img/2.jpg" />
-              <div class="p-2">
-                <h1>
-                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
-                </h1>
-                <p>Lorem ipsum dolor sit.</p>
-              </div>
-            </div>
-            <div
-              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
-            >
-              <img class="rounded-[50%] p-2" src="img/2.jpg" />
-              <div class="p-2">
-                <h1>
-                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
-                </h1>
-                <p>Lorem ipsum dolor sit.</p>
-              </div>
-            </div>
-            <div
-              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
-            >
-              <img class="rounded-[50%] p-2" src="img/2.jpg" />
-              <div class="p-2">
-                <h1>
-                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
-                </h1>
-                <p>Lorem ipsum dolor sit.</p>
-              </div>
-            </div>
-            <div
-              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
-            >
-              <img class="rounded-[50%] p-2" src="img/2.jpg" />
-              <div class="p-2">
-                <h1>
-                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
-                </h1>
-                <p>Lorem ipsum dolor sit.</p>
-              </div>
-            </div>
-            <div
-              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
-            >
-              <img class="rounded-[50%] p-2" src="img/2.jpg" />
-              <div class="p-2">
-                <h1>
-                  Bezaleel <span class="ml-14 text-[12px]">11:00 PM</span>
-                </h1>
-                <p>Lorem ipsum dolor sit.</p>
+                <p class="font-thin">
+                  <i class="bi bi-check text-slate-400"></i> Lorem ipsum dolor
+                  sit.
+                </p>
               </div>
             </div>
           </section>
         </div>
-        <div class="w-2/3 bg-slate-100"></div>
+        <div class="w-2/3 bg-slate-100">
+          <section class="p-8 m-auto text-center">
+            <img
+              class="mx-auto mt-32"
+              src="img/pngwing.com.png"
+              alt=""
+              width="100"
+            />
+            <h1 class="text-2xl mt-12">WhatsApp Web</h1>
+            <p class="mb-36">
+              Use it anywhere without the needing of phone connection
+            </p>
+            <blockquote class="font-thin italic text-sm">
+              All of the messages are encrypted <i class="bi bi-lock-fill"></i>
+            </blockquote>
+          </section>
+        </div>
       </div>
     </div>
     <script src="script.js"></script>
