--- a/chat.html
+++ b/chat.html
@@ -32,19 +32,27 @@
   <body class="bg-slate-200 font-inter">
     <div class="w-full bg-emerald-700 h-28 shadow-md fixed"></div>
     <div class="container m-auto relative pt-8">
-      <div class="bg-white shadow-md h-[36rem] mx-16 flex relative">
-        <div class="w-1/3 bg-slate-300 border-r-slate-500 h-full">
+      <div class="bg-white shadow-md h-[37.5rem] m-auto flex relative">
+        <div class="w-[27%] bg-slate-300 border-r-2 border-slate-300 h-full">
           <section class="w-full h-28 bg-slate-200">
-            <div class="w-full h-1/2 flex py-2 px-5 justify-between">
+            <div class="w-full h-1/2 flex p-2 justify-between">
               <img
                 class="rounded-[50%] cursor-pointer hover:focus:ring-slate-500 hover:border-slate-500"
                 src="img/2.jpg"
                 alt=""
               />
-              <i
-                class="bi bi-three-dots-vertical self-center cursor-pointer opacity-70 hover:opacity-100"
-                id="button"
-              ></i>
+              <div class="my-auto">
+                <i
+                  class="bi bi-globe2 self-center cursor-pointer opacity-70 hover:opacity-100 mr-4"
+                ></i>
+                <i
+                  class="bi bi-chat-left-text-fill self-center cursor-pointer opacity-70 hover:opacity-100 mr-4"
+                ></i>
+                <i
+                  class="bi bi-three-dots-vertical self-center cursor-pointer opacity-70 hover:opacity-100"
+                  id="button"
+                ></i>
+              </div>
               <div
                 class="w-24 h-36 bg-white absolute border shadow items-center left-72 top-[3rem] invisible"
                 id="dropdown"
@@ -62,36 +70,50 @@
               </form>
             </div>
           </section>
-          <section class="w-full h-[80%] bg-white overflow-auto">
+          <section class="w-full h-[30.5em] bg-white overflow-auto">
             <div
-              class="w-full h-16 bg-white border-b-2 flex cursor-pointer hover:bg-slate-50"
+              class="w-full h-16 border-b-2 flex cursor-pointer bg-slate-200"
             >
               <img class="rounded-[50%] p-2" src="img/2.jpg" />
               <div class="p-2">
-                <h1>
-                  Bezaleel <span class="ml-40 text-[12px]">11:00 PM</span>
-                </h1>
-                <p class="font-thin">
-                  <i class="bi bi-check text-slate-400"></i> Lorem ipsum dolor
-                  sit.
-                </p>
+                <div class="flex justify-between">
+                  <h1>Bezaleel Elderoy</h1>
+                  <p class="text-xs my-auto ml-24 text-green-500 font-thin">
+                    12.00
+                  </p>
+                </div>
+                <div class="flex">
+                  <p class="text-sm text-slate-600">Hi how are you?</p>
+                  <p
+                    class="text-sm text-white bg-green-500 rounded-[50%] w-5 h-5 text-center ml-32"
+                  >
+                    1
+                  </p>
+                </div>
               </div>
             </div>
           </section>
         </div>
-        <div class="w-2/3 bg-slate-100">
-          <section class="p-8 m-auto text-center">
+        <div class="w-[73%] bg-[#e5ddd5]">
+          <div class="w-full h-14 bg-slate-200 flex p-2">
             <img
-              class="mx-auto mt-32"
-              src="img/pngwing.com.png"
+              class="rounded-[50%] hover:focus:ring-slate-500 hover:border-slate-500"
+              src="img/2.jpg"
               alt=""
-              width="100"
             />
-            <h1 class="text-2xl mt-12 mb-40">WhatsApp Web</h1>
-            <blockquote class="font-thin italic text-sm">
-              All messages are encrypted <i class="bi bi-lock-fill"></i>
-            </blockquote>
-          </section>
+            <div class="my-auto ml-4">
+              <h1 class="m-0">Bezaleel Elderoy</h1>
+              <p class="m-0 font-thin text-xs">online</p>
+            </div>
+            <div class="my-auto ml-auto">
+              <i class="bi bi-search mr-4 cursor-pointer"></i>
+              <i class="bi bi-three-dots-vertical cursor-pointer"></i>
+            </div>
+          </div>
+          <div
+            class="w-full h-[calc(100%-3.5rem)] bg-[url('img/pattern.png')] opacity-10 relative"
+          ></div>
+          <div class="w-full h-[calc(100%-3.5rem)] -my-[32.5rem]"></div>
         </div>
       </div>
     </div>
